--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -4,9 +4,6 @@ html {
 
 body {
   background: #2c2c2c;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
 }
 
 h2 {
@@ -76,7 +73,6 @@ button:active {
   display: flex;
   flex-direction: column;
   padding: auto;
-  margin-left: 9rem;
   height: 20rem;
 }
 
@@ -127,8 +123,16 @@ button:active {
   margin: 0 0 0.5rem;
 }
 
+.top-content{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 #video-container{
   margin-top: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #video{
